# smartstore-cli

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  go.mod  install.ps1  install.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: release.yml
auth-helper/: README.md  pyproject.toml
auth-helper/storectl_auth_helper/: __init__.py  __main__.py  cli.py
cmd/storectl/: auth.go  config.go  doctor.go  errors.go  inquiry.go  notification.go  order.go  product.go  review.go  root.go  seller.go  settlement.go  stats.go  version.go
docs/api/: CHANGELOG.md
docs/reverse-engineering/: capture-guide.md  mitmproxy-guide.md
fixtures/responses/: .json  categories-root.json  channel-selected.json  clone-accounts.json  context.json  dashboard-banners.json  dashboard-claim.json  dashboard-inquiries.json  dashboard-marketing.json  dashboard-onboarding.json  dashboard-order-delivery.json  dashboard-penalties.json  dashboard-product-diag.json  dashboard-products.json  dashboard-review-insight.json  dashboard-reviews.json  dashboard-sales-chart.json  dashboard-settlement.json  (+20 more)
openspec/: api-responses.md  naver-seller-center-api.md  test_api.py
schemas/: config.schema.json
scripts/: activate_and_test.py  analyze_auth_pattern.py  capture_all.py  capture_playwright.py  capture_v2.py  deep_analysis.py  diff-api.py  discover_api.py  extract_resource_defs.py  final_test.py  final_test2.py  test_apis_with_params.py  test_direct.py  test_discovered_apis.py  test_with_actions.py  test_with_init.py
(+52 files in other folders)
